Major UI update, calendar, bug fixes